# KNMI_EPW_Generator

./: .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Makefile  README.md  config.yaml  gen_epw.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
Weather Files/: readme.docx  ~$readme.docx
Weather Files/EnergyPlus EPW/ Gilze-Rijen/: NLD_GZR_EPW_YR2022.epw  NLD_GZR_EPW_YR2023.epw
Weather Files/EnergyPlus EPW/ IJmond/: NLD_IMD_EPW_YR2017.epw  NLD_IMD_EPW_YR2022.epw  NLD_IMD_EPW_YR2023.epw
Weather Files/EnergyPlus EPW/Arcen/: NLD_ARE_EPW_YR2018.epw  NLD_ARE_EPW_YR2019.epw  NLD_ARE_EPW_YR2020.epw  NLD_ARE_EPW_YR2021.epw  NLD_ARE_EPW_YR2022.epw  NLD_ARE_EPW_YR2023.epw  NLD_ARE_EPW_YR2024.epw
Weather Files/EnergyPlus EPW/Berkhout/: NLD_BEH_EPW_YR2018.epw  NLD_BEH_EPW_YR2019.epw  NLD_BEH_EPW_YR2020.epw  NLD_BEH_EPW_YR2021.epw  NLD_BEH_EPW_YR2022.epw  NLD_BEH_EPW_YR2023.epw  NLD_BEH_EPW_YR2024.epw
Weather Files/EnergyPlus EPW/Cabauw/: NLD_CBW_EPW_YR2018.epw  NLD_CBW_EPW_YR2019.epw  NLD_CBW_EPW_YR2020.epw  NLD_CBW_EPW_YR2021.epw  NLD_CBW_EPW_YR2022.epw  NLD_CBW_EPW_YR2023.epw  NLD_CBW_EPW_YR2024.epw
Weather Files/EnergyPlus EPW/Cadzand/: NLD_CDZ_EPW_YR2018.epw  NLD_CDZ_EPW_YR2019.epw  NLD_CDZ_EPW_YR2020.epw  NLD_CDZ_EPW_YR2021.epw  NLD_CDZ_EPW_YR2022.epw  NLD_CDZ_EPW_YR2023.epw  NLD_CDZ_EPW_YR2024.epw
Weather Files/EnergyPlus EPW/De Bilt/: NLD_DBL_EPW_ISO-18.epw  NLD_DBL_EPW_NEN-08.epw  NLD_DBL_EPW_YR1986.epw  NLD_DBL_EPW_YR1987.epw  NLD_DBL_EPW_YR1991.epw  NLD_DBL_EPW_YR1995.epw  NLD_DBL_EPW_YR1997.epw  NLD_DBL_EPW_YR1998.epw  NLD_DBL_EPW_YR1999.epw  NLD_DBL_EPW_YR2002.epw  NLD_DBL_EPW_YR2005.epw  NLD_DBL_EPW_YR2006.epw  NLD_DBL_EPW_YR2009.epw  NLD_DBL_EPW_YR2010.epw  NLD_DBL_EPW_YR2011.epw  NLD_DBL_EPW_YR2012.epw  NLD_DBL_EPW_YR2013.epw  NLD_DBL_EPW_YR2014.epw  NLD_DBL_EPW_YR2016.epw  NLD_DBL_EPW_YR2018.epw  NLD_DBL_EPW_YR2019.epw  NLD_DBL_EPW_YR2020.epw  NLD_DBL_EPW_YR2021.epw  NLD_DBL_EPW_YR2022.epw  NLD_DBL_EPW_YR2023.epw  NLD_DBL_EPW_YR2024.epw
Weather Files/EnergyPlus EPW/De Kooy/: NLD_DKY_EPW_ISO-18.epw  NLD_DKY_EPW_YR1996.epw  NLD_DKY_EPW_YR1997.epw  NLD_DKY_EPW_YR1998.epw  NLD_DKY_EPW_YR1999.epw  NLD_DKY_EPW_YR2000.epw  NLD_DKY_EPW_YR2001.epw  NLD_DKY_EPW_YR2002.epw  NLD_DKY_EPW_YR2003.epw  NLD_DKY_EPW_YR2004.epw  NLD_DKY_EPW_YR2007.epw  NLD_DKY_EPW_YR2009.epw  NLD_DKY_EPW_YR2010.epw  NLD_DKY_EPW_YR2011.epw  NLD_DKY_EPW_YR2012.epw  NLD_DKY_EPW_YR2013.epw  (+8 more)
data/stations/: knmi_STN_infor.csv
docs/: architecture.rst  conf.py  index.rst  roadmap.rst
docs/api/: config.rst  modules.rst
examples/: basic_usage.py  performance_comparison.py
knmi/: uurgeg_209_2021-2030.txt  uurgeg_215_2021-2030.txt  uurgeg_225_2021-2030.txt  uurgeg_229_2021-2030.txt  uurgeg_235_2021-2030.txt  uurgeg_240_2021-2030.txt  uurgeg_242_2021-2030.txt  uurgeg_248_2021-2030.txt  uurgeg_249_2021-2030.txt  uurgeg_251_2021-2030.txt  uurgeg_257_2021-2030.txt  uurgeg_258_2021-2030.txt  uurgeg_260_2021-2030.txt  uurgeg_267_2021-2030.txt  uurgeg_269_2021-2030.txt  uurgeg_270_2021-2030.txt  uurgeg_273_2021-2030.txt  uurgeg_275_2021-2030.txt  uurgeg_277_2021-2030.txt  uurgeg_278_2021-2030.txt  uurgeg_279_2021-2030.txt  uurgeg_280_2021-2030.txt  uurgeg_283_2021-2030.txt  uurgeg_285_2021-2030.txt  uurgeg_286_2021-2030.txt  uurgeg_290_2021-2030.txt  uurgeg_308_2021-2030.txt  uurgeg_310_2021-2030.txt  uurgeg_312_2021-2030.txt  uurgeg_313_2021-2030.txt  uurgeg_315_2021-2030.txt  uurgeg_316_2021-2030.txt  uurgeg_319_2021-2030.txt  uurgeg_323_2021-2030.txt  uurgeg_324_2021-2030.txt  uurgeg_330_2021-2030.txt  uurgeg_331_2021-2030.txt  uurgeg_340_2021-2030.txt  uurgeg_343_2021-2030.txt  uurgeg_344_2021-2030.txt  (+8 more)
legacy/: README.md  gen_epw.py
legacy/suneye/: suneye.py
prepare_data/: NLD_Amsterdam.062400_IWEC.epw  auto_epw_generation.agx  knmi_STN_infor.csv
src/knmi_epw/: __init__.py  batch_processor.py  cli.py  config.py  downloader.py  epw_generator.py  exceptions.py  logging_config.py  processor.py  station_manager.py  utils.py  validators.py
test/: NLD_GZR_EPW_YR2023.epw
tests/: __init__.py  conftest.py  test_config.py  test_station_manager.py
(+452 files in other folders)
